# DiscordSupportBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  discord_bot.py  main.py  pyproject.toml  requirements.txt
backend/: __init__.py
backend/agent/: agent.py  tools.py
backend/helpers/: strip_thinking.py
backend/prompts/: ains.txt  data_overflow.txt  orbit.txt  system_prompt.md  xtreme.txt
backend/src/: agent.py  get_response.py  guardrails.py
